--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,22 @@
             "request": "attach",
             "mode": "local",
             "processId": 0
+        },
+        {
+            "name": "Launch Server",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "envFile": "${workspaceFolder}/.env",
+            "program": "./server/server.go"
+        },
+        {
+            "name": "Launch Client",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "envFile": "${workspaceFolder}/.env",
+            "program": "./client/client.go"
         }
     ]
 }
